Coverity analysis defect 120391: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0, v4.4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/pipeline/document_source_unwind.cpp:92: UNINIT_CTOR 120391 Class member declaration for "_index".
      /src/mongo/db/pipeline/document_source_unwind.cpp:102: UNINIT_CTOR 120391 Non-static class member "_index" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: