SERVER-59188 Fix coverity issue in DocumentSourceUnwind